--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body * {
   list-style-type: none;
 }
 
-h1 {
+.title {
   margin-top: 10vmin;
 }
 
